[package]
name = "keyfront"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bstr = { version = "1.12.0", default-features = false }
bytes = "1.10.1"
clap = { version = "4.5.43", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
itoa = "1.0.15"
phf = "0.12.1"
phf_shared = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tikv-jemallocator = "0.6"
tokio = { version = "1.47.1", default-features = false, features = [
	"rt-multi-thread",
	"macros",
	"net",
	"sync",
	"signal",
	"io-util",
] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.16", features = ["rt", "codec", "time"] }
toml = { version = "0.9.5", default-features = false, features = [
	"parse",
	"serde",
] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
phf_codegen = "0.12.1"
phf_shared = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true

[lints.clippy]
nursery = "warn"
pedantic = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
