[package]
name = "keyfront-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.keyfront]
path = ".."

[[bin]]
name = "parse_query"
path = "fuzz_targets/parse_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_reply"
path = "fuzz_targets/parse_reply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hash_slot"
path = "fuzz_targets/hash_slot.rs"
test = false
doc = false
bench = false
